# IM2PROP

./: .gitignore  EBSD_phase_dilation.ipynb  LICENSE  README.md  hardness_value.ipynb  main.ipynb  phase_mapping_final.ipynb  pyproject.toml  requirements.txt  test.ipynb
IM2PROP_data/: IM2PROP_dataset_homo_v1.csv
analysis/mae_visualization/: visualize.py
analysis/mae_visualization/results/: summary_table.csv
im2prop/: config.py
im2prop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
im2prop/data/: dataset.py  preprocess.py
im2prop/models/: __init__.py  micronet.py
im2prop/training/: __init__.py  engine.py  pipeline.py
notebooks/: correlation_analysis.ipynb  default_property.ipynb  hardness_value.ipynb  phase_mapping_final.ipynb
scripts/: run_phase_combinations.sh  run_pipeline.py
