[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "im2prop"
version = "0.1.0"
description = "IM2PROP package refactored from notebook workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "opencv-python>=4.8",
  "scikit-learn>=1.3",
  "pillow>=10.0",
  "tqdm>=4.66",
  "pretrained-microscopy-models",
  "grad-cam",
  "wandb",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["im2prop*"]
